--- a/index.html
+++ b/index.html
@@ -4,7 +4,203 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <!-- font awesome -->
+  <script
+   src="https://kit.fontawesome.com/661efb6181.js"
+   crossorigin="anonymous"
+  ></script>
+  <!-- Custom CSS file -->
+  <link rel="stylesheet" href="./css/style.css" />
+  <title>Football Motion</title>
  </head>
- <body></body>
+ <body>
+  <header>
+   <nav class="container">
+    <div class="navbar">
+     <ul>
+      <li><a href="">Home</a></li>
+      <li><a href="">Clubs</a></li>
+      <li><a href="">World Cup 2022</a></li>
+      <li><a href="">Upcoming Matchs</a></li>
+      <li><a href="">Contact</a></li>
+     </ul>
+    </div>
+    <div class="login-btn">
+     <button class="btn"><i class="fas fa-sign-in-alt"></i> Login</button>
+    </div>
+   </nav>
+   <section class="header-content container">
+    <div class="header-text">
+     <h1>
+      Conmebol <br />Copa America<br />
+      2021
+     </h1>
+     <button class="btn">
+      Watch Live <i class="fas fa-long-arrow-alt-right"></i>
+     </button>
+    </div>
+    <div class="header-image">
+     <img src="./images/banner.png" alt="" />
+    </div>
+   </section>
+  </header>
+  <main class="container">
+   <!-- Players Section Start -->
+   <div class="players-section">
+    <div class="player">
+     <img src="./images/players/player-1.png" alt="" />
+     <h2>Neymar Jr</h2>
+     <p>
+      Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian
+      professional footballer who plays as a forward for Ligue 1 club Paris
+      Saint-Germain and the Brazil national team. He is widely regarded as one
+      of the best players in the world.
+     </p>
+    </div>
+    <div class="player">
+     <img src="./images/players/player-2.png" alt="" />
+     <h2>Lionel Messi</h2>
+     <p>
+      Lionel Andrés Messi is an Argentine professional footballer who plays as a
+      forward and captains the Argentina national team. He is currently a free
+      agent, having played all his professional career for La Liga club
+      Barcelona.
+     </p>
+    </div>
+    <div class="player">
+     <img src="./images/players/player-3.png" alt="" />
+     <h2>Cristiano Ronaldo</h2>
+     <p>
+      Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese professional
+      footballer who plays as a forward for Serie A club Juventus and captains
+      the Portugal national team.
+     </p>
+    </div>
+    <div class="player">
+     <img src="./images/players/player-4.png" alt="" />
+     <h2>Paulo Dybala</h2>
+     <p>
+      Paulo Exequiel Dybala is an Argentine professional footballer who plays as
+      a forward for Serie A club Juventus and the Argentina national team.
+     </p>
+    </div>
+    <div class="player">
+     <img src="./images/players/player-5.png" alt="" />
+     <h2>Mesut Özil</h2>
+     <p>
+      Mesut Özil is a German professional footballer who plays as an attacking
+      midfielder for Süper Lig club Fenerbahçe. Nicknamed "The Assist King",
+      Özil is known for his technical skills, creativity, agility, and finesse.
+      He has also played as a wide midfielder in his career.
+     </p>
+    </div>
+    <div class="player">
+     <img src="./images/players/player-6.png" alt="" />
+     <h2>Mauro Icardi</h2>
+     <p>
+      Mauro Emanuel Icardi is an Argentine professional footballer who plays as
+      a striker for Ligue 1 club Paris Saint-Germain and the Argentina national
+      team.
+     </p>
+    </div>
+    <div class="player">
+     <img src="./images/players/player-7.png" alt="" />
+     <h2>Ángel Di María</h2>
+     <p>
+      Ángel Fabián Di María is an Argentine professional footballer who plays
+      for Ligue 1 club Paris Saint-Germain and the Argentina national team. He
+      can play as either a winger or attacking midfielder.
+     </p>
+    </div>
+    <div class="player">
+     <img src="./images/players/player-8.png" alt="" />
+     <h2>Kylian Mbappé</h2>
+     <p>
+      Kylian Mbappé Lottin is a French professional footballer who plays as a
+      forward for Ligue 1 club Paris Saint-Germain and the France national team.
+      Mbappé began his senior career with Ligue 1 club Monaco, making his
+      professional debut in 2015, aged 16.
+     </p>
+    </div>
+    <div class="player">
+     <img src="./images/players/player-9.png" alt="" />
+     <h2>Mohamed Salah</h2>
+     <p>
+      Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer
+      who plays as a forward for Premier League club Liverpool and captains the
+      Egypt national team. Considered one of the best players in the world, he
+      is known for his finishing, dribbling, and speed.
+     </p>
+    </div>
+    <div class="player">
+     <img src="./images/players/player-10.png" alt="" />
+     <h2>Harry Kane</h2>
+     <p>
+      Harry Edward Kane MBE is an English professional footballer who plays as a
+      striker for Premier League club Tottenham Hotspur and captains the England
+      national team. Regarded as one of the best strikers in the world, Kane is
+      known for his prolific goalscoring record and ability to link play.
+     </p>
+    </div>
+    <div class="player">
+     <img src="./images/players/player-11.png" alt="" />
+     <h2>Kevin De Bruyne</h2>
+     <p>
+      Kevin De Bruyne is a Belgian professional footballer who plays as a
+      midfielder for Premier League club Manchester City, where he is
+      vice-captain, and the Belgium national team.
+     </p>
+    </div>
+    <div class="player">
+     <img src="./images/players/player-12.png" alt="" />
+     <h2>Philippe Coutinho</h2>
+     <p>
+      Philippe Coutinho Correia is a Brazilian professional footballer who plays
+      as an attacking midfielder or winger for Spanish club Barcelona and the
+      Brazil national team. He is known for his combination of vision, passing,
+      dribbling and ability to conjure curving long-range strikes.
+     </p>
+    </div>
+   </div>
+   <!-- Iframe Section -->
+   <section class="iframe-section">
+    <h1>Watch On YouTube</h1>
+    <iframe
+     width="560"
+     height="315"
+     src="https://www.youtube.com/embed/sDFr2Yzd-8s"
+     title="YouTube video player"
+     frameborder="0"
+     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+     allowfullscreen
+    ></iframe>
+   </section>
+   <!-- Highlights Section Start -->
+   <section class="highlights-section">
+    <div class="highlights-text">
+     <h2>All Highlights <br />Copa America 2021</h2>
+     <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis
+      dignissimos distinctio possimus animi. Nulla, voluptatibus, dolor quia
+      vero atque officiis, quasi repellendus odit corrupti est tenetur iure quo
+      vel necessitatibus.
+     </p>
+     <button class="btn">
+      Watch Now <i class="fas fa-long-arrow-alt-right"></i>
+     </button>
+    </div>
+    <div class="highlights-image">
+     <img src="./images/match.png" alt="" />
+    </div>
+   </section>
+  </main>
+  <footer class="container">
+   <section class="footer-section">
+    <div class="footer-image">
+     <img class="footer-image" src="./images/Logo.png" alt="" />
+    </div>
+    <p>Copyright &copy; 2022 Football</p>
+   </section>
+  </footer>
+ </body>
 </html>
