--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <header>
    <nav class="container">
     <div class="navbar">
+     <i class="fas fa-bars"></i>
      <ul>
       <li><a href="">Home</a></li>
       <li><a href="">Clubs</a></li>
@@ -191,6 +192,36 @@
     </div>
     <div class="highlights-image">
      <img src="./images/match.png" alt="" />
+    </div>
+   </section>
+   <!-- Sponsors Section Start -->
+   <section class="sponsors-section">
+    <h1 class="sponsors-title">Our <span>Sponsors</span></h1>
+    <div class="sponsor-showcase">
+     <div class="sponsor">
+      <img src="./images/sponsors/adidas.png" alt="" />
+     </div>
+     <div class="sponsor">
+      <img src="./images/sponsors/amazon.png" alt="" />
+     </div>
+     <div class="sponsor">
+      <img src="./images/sponsors/mastercard.png" alt="" />
+     </div>
+     <div class="sponsor">
+      <img src="./images/sponsors/nike.png" alt="" />
+     </div>
+     <div class="sponsor">
+      <img src="./images/sponsors/paypal.png" alt="" />
+     </div>
+     <div class="sponsor">
+      <img src="./images/sponsors/samsung.png" alt="" />
+     </div>
+     <div class="sponsor">
+      <img src="./images/sponsors/sony.png" alt="" />
+     </div>
+     <div class="sponsor">
+      <img src="./images/sponsors/yandex.png" alt="" />
+     </div>
     </div>
    </section>
   </main>
