--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
      </button>
     </div>
     <div class="header-image">
-     <img src="./images/banner.png" alt="" />
+     <img class="football-player" src="./images/banner-1.png" alt="" />
+     <img class="football" src="./images/football-img.png" alt="" />
     </div>
    </section>
   </header>
