--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
     </div>
    </section>
   </main>
+  <!-- footer section -->
   <footer class="container">
    <section class="footer-section">
     <div class="footer-image">
