--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
    src="https://kit.fontawesome.com/661efb6181.js"
    crossorigin="anonymous"
   ></script>
+  <!-- favicon -->
+  <link rel="shortcut icon" href="./images/site-icon.ico" type="image/x-icon" />
   <!-- Custom CSS file -->
   <link rel="stylesheet" href="./css/style.css" />
   <title>Football Motion</title>
