--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <li><a href="#players">Players</a></li>
       <li><a href="#channel">Channel</a></li>
       <li><a href="#highlights">Highlights</a></li>
-      <li><a href="">Contact</a></li>
+      <li><a href="#contact">Contact</a></li>
      </ul>
     </div>
     <div class="login-btn">
@@ -258,7 +258,7 @@
     <div class="footer-image">
      <img class="footer-image" src="./images/Logo.png" alt="" />
     </div>
-    <section class="contact-icons">
+    <section class="contact-icons" id="contact">
      <a href="https://www.facebook.com/rahmanhamim.info/" target="_blank"
       ><i class="fab fa-facebook"></i
      ></a>
